crates/llvmkit-ir/tests/compile_fail/ir_struct_try_from_cross_module_brand.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/compile_fail/ir_struct_try_from_cross_module_brand.rs:27:21
   |
19 |           let left_point = PointValue::try_from(left_fn.param(0)?)?;
   |               ---------- `left_point` declared here, outside of the closure body
20 |
21 |           Module::with_new("right", |right| {
   |                                      ----- `right` is a reference that is only valid in the closure body
...
27 |               let _ = builder.build_insert_field::<Point, i32, _, _, _>(
   |  _____________________^
28 | |                 left_point,
29 | |                 1_i32,
30 | |                 0,
31 | |                 "wrong_module",
32 | |             )?;
   | |_____________^ `right` escapes the closure body here
   |
   = note: requirement occurs because of the type `PointValue<'_, Brand<'_>>`, which makes the generic argument `Brand<'_>` invariant
   = note: the struct `PointValue<'ctx, B>` is invariant over the parameter `B`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error[E0521]: borrowed data escapes outside of closure
  --> tests/compile_fail/ir_struct_try_from_cross_module_brand.rs:26:27
   |
15 |     Module::with_new("left", |left| {
   |                               ----
   |                               |
   |                               `left` is a reference that is only valid in the closure body
   |                               has type `Module<'1>`
...
26 |             let builder = IRBuilder::new_for::<()>(&right).position_at_end(entry);
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                           |
   |                           `left` escapes the closure body here
   |                           argument requires that `'1` must outlive `'static`
